--- a/src/App.css
+++ b/src/App.css
@@ -5,24 +5,6 @@
   text-align: center;
 }
 
-.planner-grid-container {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-column-gap: 100px;
-    grid-row-gap: 50px;
-    height: 100%;
-    width: 1000px;
-}
-
-.planner-grid-item {
-    background-color: rgba(255,255,255,0.5);
-    text-align: center;
-    padding: 20px;
-    overflow:auto;
-    border-style: solid;
-    border-radius: 15px;
-}
-
 .notes-textarea {
     height: 60%;
     width: 100%;
@@ -59,4 +41,17 @@
     flex-wrap: wrap;
     gap: 10px;
     justify-content: center;
+}
+
+.hydration-grid-container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 10px;
+    padding: 10px;
+}
+
+.hydration-grid-item {
+    background-color: lightblue;
+    border: 1px solid black;
+    text-align: center;
 }
